scopes done